--- a/src/language/locales/mr.json
+++ b/src/language/locales/mr.json
@@ -255,7 +255,11 @@
     "New password and confirm password does not match.": "नवीन पासवर्ड आणि पुष्टी पासवर्ड जुळत नाहीत.",
     "Network request failed. Please try again later.": "नेटवर्क विनंती अयशस्वी झाली. कृपया नंतर पुन्हा प्रयत्न करा.",
     "Profile picture removed successfully": "प्रोफाईल चित्र यशस्वीरित्या काढले गेले.",
-    "User Profile Updated Successfully": "वापरकर्ता प्रोफाईल यशस्वीरित्या अद्ययावत केले गेले."
+    "User Profile Updated Successfully": "वापरकर्ता प्रोफाईल यशस्वीरित्या अद्ययावत केले गेले.",
+    "This score is generated from the answers you provided during onboarding. Track your progress as you move forward!":"हे स्कोअर आपल्याद्वारे ऑनबोर्डिंग दरम्यान दिलेल्या उत्तरांवर आधारित तयार करण्यात आले आहे. आपला प्रगती मार्गक्रमण करतांना ट्रॅक करा!",
+    "Your Initial Score !":"तुमचा प्राथमिक स्कोअर!",
+    "Congratulations On Completing the Free Videos !":"फ्री व्हिडिओ पूर्ण केल्याबद्दल अभिनंदन!",
+    "Take the test to track your progress on your smoke-free journey with Cignix":"सिग्निक्ससह आपल्या धूम्रपानमुक्त प्रवासातील प्रगती ट्रॅक करण्यासाठी टेस्ट द्या."
   },
   "HelpCenter": {
     "Discover how to reach us and connect with our support team": "आमच्याशी संपर्क साधण्यासाठी आणि आमच्या समर्थन टीमशी कसे जोडावे हे शोधा",
@@ -708,7 +712,8 @@
     "Time for a Quick Exercise!": "एक जलद व्यायामासाठी वेळ!",
     "Let’s reinforce what you learned! Complete": "तुम्ही शिकलेल्या गोष्टी मजबूत करूया! पूर्ण करा",
     "the short exercise below": "खालील लहान व्यायाम",
-    "Submit & Continue": "सामान्य करा & पुढे जा"
+    "Submit & Continue": "सामान्य करा & पुढे जा",
+    "Please answer all the questions":"कृपया सर्व प्रश्नांची उत्तरे द्या"
   },
   "Success": {
     "Congratulations on": "आपल्याला शुभेच्छा",
@@ -743,5 +748,20 @@
     "A cigarette a day takes your life away. Break free from tobacco and start living better today!": "दररोज एक सिगारेट तुमचे आयुष्य कमी करते. तंबाखूपासून मुक्त व्हा आणि आजच चांगले जीवन जगायला सुरुवात करा!",
     "Get Started": "सुरू करा",
     "Already Have an Account?": "आधीच खाते आहे का?"
-  }
+  },
+  "Step4":{
+    "Lessons": "धडे",
+    "Day": "दिवस",
+    "Upcoming": "आगामी",
+    "Video is Locked": "व्हिडिओ लॉक केलेला आहे",
+    "Mins": "मिनिटे",
+    "Live Sessions": "लाइव्ह सत्रे",
+    "Unlock Your Potential With": "आपली क्षमता उघडा",
+    "1-on-1 Sessions": "1-ऑन-1 सत्रे",
+    "Personalized Guidance Tailored just for You !": "आपल्यासाठी वैयक्तिकृत मार्गदर्शन!",
+    "Date": "तारीख",
+    "Time": "वेळ",
+    "Enroll Now": "आता नोंदणी करा",
+    "Currently you have access to watch till day":"सद्यस्थितीत तुम्हाला दिवसापर्यंत पाहण्याचा प्रवेश आहे."
+}
 }
