--- a/src/language/locales/hi.json
+++ b/src/language/locales/hi.json
@@ -166,7 +166,8 @@
     "Verfiy OTP": "ओटीपी सत्यापित करें",
     "Time Remaining": "शेष समय",
     "Didn’t get the code": "कोड नहीं मिला?",
-    "Resend": "पुनः भेजें"
+    "Resend": "पुनः भेजें",
+    "Next": "अगला"
   },
   "Congts": {
     "Congrats": "बधाई हो",
@@ -274,11 +275,10 @@
     "Network request failed. Please try again later.": "नेटवर्क अनुरोध विफल हुआ। कृपया बाद में पुनः प्रयास करें।",
     "Profile picture removed successfully": "प्रोफ़ाइल चित्र सफलतापूर्वक हटाया गया।",
     "User Profile Updated Successfully": "यूज़र प्रोफ़ाइल सफलतापूर्वक अपडेट की गई।",
-    "This score is generated from the answers you provided during onboarding. Track your progress as you move forward!":"यह स्कोर आपके द्वारा ऑनबोर्डिंग के दौरान दिए गए उत्तरों से उत्पन्न हुआ है। आगे बढ़ने के साथ अपनी प्रगति का ट्रैक करें!",
-    "Your Initial Score !":"आपका प्रारंभिक स्कोर!",
-    "Congratulations On Completing the Free Videos !":"मुफ्त वीडियोस को पूरा करने पर बधाई हो!",
-    "Take the test to track your progress on your smoke-free journey with Cignix":"सिग्निक्स के साथ अपनी धूम्रपान-मुक्त यात्रा पर अपनी प्रगति ट्रैक करने के लिए परीक्षण करें।"
-    
+    "This score is generated from the answers you provided during onboarding. Track your progress as you move forward!": "यह स्कोर आपके द्वारा ऑनबोर्डिंग के दौरान दिए गए उत्तरों से उत्पन्न हुआ है। आगे बढ़ने के साथ अपनी प्रगति का ट्रैक करें!",
+    "Your Initial Score !": "आपका प्रारंभिक स्कोर!",
+    "Congratulations On Completing the Free Videos !": "मुफ्त वीडियोस को पूरा करने पर बधाई हो!",
+    "Take the test to track your progress on your smoke-free journey with Cignix": "सिग्निक्स के साथ अपनी धूम्रपान-मुक्त यात्रा पर अपनी प्रगति ट्रैक करने के लिए परीक्षण करें।"
   },
   "HelpCenter": {
     "Discover how to reach us and connect with our support team": "जानें कि हमसे कैसे संपर्क करें और हमारी सहायता टीम से कैसे जुड़ें",
@@ -732,11 +732,11 @@
     "Let’s reinforce what you learned! Complete": "आपने जो सीखा है उसे मजबूत करें! पूरा करें",
     "the short exercise below": "नीचे दिया गया छोटा व्यायाम",
     "Submit & Continue": "सबमिट करें & जारी रखें",
-    "Please answer all the questions":"कृपया सभी प्रश्नों का उत्तर दें"
+    "Please answer all the questions": "कृपया सभी प्रश्नों का उत्तर दें"
   },
   "Success": {
     "Congratulations on": "बधाई हो",
-    "Completing the Quiz": "क्विज़ पूरा करने के लिए",
+    "Completing the SIM Test": "क्विज़ पूरा करने के लिए",
     "To check your scores and see how you did": "अपने स्कोर जांचने और यह देखने के लिए कि आपने कैसे प्रदर्शन किया",
     "please sign up or log in!": "कृपया साइन अप करें या लॉग इन करें!",
     "Sign Up to View Scores": "स्कोर देखने के लिए साइन अप करें"
@@ -768,7 +768,7 @@
     "Get Started": "शुरू करें",
     "Already Have an Account?": "पहले से ही एक खाता है?"
   },
-  "Step4":{
+  "Step4": {
     "Lessons": "पाठ",
     "Day": "दिन",
     "Upcoming": "आनेवाला",
@@ -781,6 +781,6 @@
     "Date": "तारीख",
     "Time": "समय",
     "Enroll Now": "अभी नामांकन करें",
-    "Currently you have access to watch till day":"वर्तमान में आपके पास दिन तक देखने तक पहुँच है।"
-}
+    "Currently you have access to watch till day": "वर्तमान में आपके पास दिन तक देखने तक पहुँच है।"
+  }
 }
